--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "ES2020",
-      "module": "commonjs",
+      "module": "NodeNext",
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
@@ -9,6 +9,6 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/index.ts"],
     "exclude": ["node_modules"]
   }
