--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.13.0",
     "@types/ws": "^8.5.14",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
