--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "geist": "^1.3.1",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "ollama": "^0.5.12",
     "react": "^19.0.0",
